# CRAPI

./: Cargo.toml  README.md
src/: main.rs
src/api/: api.rs
src/models/: todo.rs
src/repository/: database.rs
