[package]
name = "carpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.136", features = ["derive"] }
dotenv = "0.15.0"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
